fix: transition ios

--- a/src/css/push-view.css
+++ b/src/css/push-view.css
@@ -1,8 +1,10 @@
 @media screen and (min-width: 0px) and (max-width: 768px) {
   .push-container--animating {
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out; }
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+    -moz-transition: -moz-transform 0.5s ease-in-out;
+    -msie-transition: -msie-transform 0.5s ease-in-out;
+    -o-transition: -o-transform 0.5s ease-in-out;
+    transition: transform .5s ease-in-out; }
   .push-container--opened {
     -webkit-transform: translate3d(-100%, 0, 0);
     -moz-transform: translate3d(-100%, 0, 0);
@@ -16,15 +18,10 @@
   .push-container--animating .push-view, .push-container--animating .push-view--custom, .push-container--opened .push-view, .push-container--opened .push-view--custom {
     display: block; }
   .push-view {
-    -webkit-transform: translate3d(100%, 0, 0);
-    -moz-transform: translate3d(100%, 0, 0);
-    -ms-transform: translate3d(100%, 0, 0);
-    -o-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
     display: none;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 100%;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
